== Release notes

Every release contains many small fixes.

=== next
* historized sql repository: completely support historized references (and lists)
* Remove RenderType. Redesign Rendering concept
* Redesign Lookup UI concept
* validation refactoring
* JsonImage : image upload in JsonFrontend

=== 1.14.0.0
* Allow wizards to have a last step without active next button
* HtmlFrontend: add close button to dialogs

=== 1.13.0.0
* Sorting for completely loaded tables
* SimpleTablePageWithDetail more helper methods
* HtmlFrontend: more dynamic layout
* Materialized getters (@Materialized)

=== 1.12.0.0
* Codes: clear cache when write a code
* Upgrade to Lanterna 3

=== 1.11.0.0
* Application: Declare Resources with Bundles, not with Strings
* Refactor repository configuration
* For the moment the historized repository is a an ext - project

=== 1.10.0.0
* Split Application/Model/Api
* More work/doc on routing

=== 1.9.0.0
* HtmlFrontend: FlexBox Layout
* HtmlFrontend: Title in Browser
* Frontends: Simple application icon
* Pages can provide route for bookmarks
* Vaadin Frontend: complete migration to Vaadin 8

=== 1.8.0.0
* Model: self references of classes are only allowed through View or Lists
* SwingFrontend: fix special LookAndFeel

=== 1.7.0.0
* Frontend: support for html5 inputs on small devices
* Frontend: better Date/Time/DateTime support
* In Memory Database nearly complete

=== 1.6.0.0
* Support for H2 Database - much faster than derby
* Update maria db connector
* In Memory Database (as extension project)

=== 1.5.0.0
* Redesign / refactoring of queries (repository)
* Extendable search tables

=== 1.4.0.0
* Repository: removed active 'push' of changes on lazy lists

=== 1.3.0.0
* SqlRepository: Oracle Dialect
* Security: removed Grant concept, redesigned authorization
* Renamed Persistence class and package to repository

=== 1.2.0.0
* Frontend: replace special Size class with a simple integer (API change)
* Persistence: Optimistic locking