@@ -3,11 +3,12 @@
 Every release contains many small fixes.
 
 === next
-* historized sql repository: completely support historized references (and lists)
+* historized sql repository: complete support historized references (and lists)
 * Remove RenderType. Redesign Rendering concept
 * Redesign Lookup UI concept
 * validation refactoring
 * JsonImage : image upload in JsonFrontend
+* Rename NanoWebServer to WebServer
 
 === 1.14.0.0
 * Allow wizards to have a last step without active next button
